fix(signup): fixes some issues
